--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-# GDAL - try to install, but make it optional for cloud platforms
-# If system python3-gdal is installed, we can use that instead
+# Try to install GDAL - if system libraries are available, this might work
+# If it fails, the app will handle it gracefully
+gdal>=3.8.0
 streamlit>=1.28.0
 numpy>=1.24.0
 pillow>=10.0.0
